--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,29 +14,43 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    # Step 2: Set up Java 21
+    # Step 2: Set up JDK 21
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: '21'
 
-    # Step 3: Build the Spring Boot application using Maven
-    - name: Build with Maven
-      run: mvn clean package
+    # Step 3: Export Environment Variables
+    - name: Export Environment Variables
+      run: |
+        export DB_URL=${{ secrets.DB_URL }}
+        export DB_USERNAME=${{ secrets.DB_USERNAME }}
+        export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+        export CORS_URL=${{ secrets.CORS_URL }}
+        echo "Environment variables exported successfully"
 
-    # Step 4: Log in to Docker Hub
+    # Step 4: Build the Spring Boot application with Maven
+    - name: Build with Maven
+      run: |
+        export DB_URL=${{ secrets.DB_URL }}
+        export DB_USERNAME=${{ secrets.DB_USERNAME }}
+        export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+        export CORS_URL=${{ secrets.CORS_URL }}
+        mvn clean package
+
+    # Step 5: Log in to Docker Hub
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 5: Build the Docker image
+    # Step 6: Build the Docker image
     - name: Build Docker Image
       run: docker build -t lavanjv/city-search-be:latest .
 
-    # Step 6: Push the Docker image to Docker Hub
+    # Step 7: Push the Docker image to Docker Hub
     - name: Push Docker Image to DockerHub
       run: docker push lavanjv/city-search-be:latest
 
