--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to MicroK8s
+name: Build and Deploy to Remote MicroK8s
 
 on:
   push:
@@ -10,18 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout code from the repository
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    # Step 2: Set up JDK 21
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: '21'
-
-    # Step 3: Export Environment Variables
+ 
     - name: Export Environment Variables
       run: |
         export DB_URL=${{ secrets.DB_URL }}
@@ -30,7 +27,6 @@ jobs:
         export CORS_URL=${{ secrets.CORS_URL }}
         echo "Environment variables exported successfully"
 
-    # Step 4: Build the Spring Boot application with Maven
     - name: Build with Maven
       run: |
         export DB_URL=${{ secrets.DB_URL }}
@@ -39,19 +35,16 @@ jobs:
         export CORS_URL=${{ secrets.CORS_URL }}
         mvn clean package
 
-    # Step 5: Log in to Docker Hub
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 6: Build the Docker image
     - name: Build Docker Image
       run: docker build -t lavanjv/city-search-be:latest .
 
-    # Step 7: Push the Docker image to Docker Hub
-    - name: Push Docker Image to DockerHub
+    - name: Push Docker Image
       run: docker push lavanjv/city-search-be:latest
 
   deploy:
@@ -59,13 +52,18 @@ jobs:
     needs: build
 
     steps:
-    # Step 1: Checkout code from the repository
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    # Step 2: Deploy to MicroK8s
-    - name: Deploy to MicroK8s
-      run: |
-        echo "${{ secrets.KUBECONFIG }}" > kubeconfig.yaml
-        export KUBECONFIG=kubeconfig.yaml
-        microk8s kubectl apply -f k8s/deployment.yaml
+    - name: SSH and Deploy to MicroK8s
+      uses: appleboy/ssh-action@v0.1.7
+      with:
+        host: ${{ secrets.REMOTE_HOST }}
+        username: ${{ secrets.REMOTE_USER }}
+        password: ${{ secrets.REMOTE_PASSWORD }}
+        port: 22
+        script: |
+          echo "Logging into the server..."
+          cd /path/to/k8s
+          microk8s kubectl apply -f deployment.yaml
+          echo "Deployment completed!"
